Add mailchimp header

--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,11 @@
 
       gtag("config", "G-3G9EMTCRYZ");
     </script>
+    <script id="mcjs">
+      !(function (c, h, i, m, p) {
+        (m = c.createElement(h)), (p = c.getElementsByTagName(h)[0]), (m.async = 1), (m.src = i), p.parentNode.insertBefore(m, p);
+      })(document, "script", "https://chimpstatic.com/mcjs-connected/js/users/3da3084c5cfd417b5b8f37bd2/171bfbc8744ebd94ac6432f15.js");
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
