more formatting and phrasing updates

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="theme-color" content="#121212" />
     <meta
       name="description"
-      content="The ISTS competition is an annual three-day cyber attack/ defend competition hosted at
-    the Rochester Institute of Technology by RITSEC."
+      content="The ISTS competition is an annual three-day cyber attack/ defend competition hosted by RITSEC at
+    the Rochester Institute of Technology."
     />
     <link rel="apple-touch-icon" href="/logo512.png" />
     <!--
